[project]
name = "comfyui-useful-meti"
version = "1.1.1"
description = "Useful custom nodes for ComfyUI by Meti"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [{name = "Metixxx", email = "sharifi.3d@gmail.com"}]

[tool.comfy]
PublisherId = "metixxx"
DisplayName = "Useful-Meti"
Tags = ["timer", "generation time", "past images", "image history", "save image", "batch save", "workflow time", "performance", "utility", "useful", "meti", "time", "save", "history", "gallery"]

[project.urls]
Repository = "https://github.com/metixxx/ComfyUI-Useful-Meti"